--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ mapbox.auto('mainMap', 'andyhull.map-u3mmbcus');
 </head>
 <body>
 <div id="main" class="layout-inner">
-      <div id="header"><h3>Social Services</h3>
+      <div id="header"><h3>RCA Social Services</h3>
       	<div id="subheader"><h5>Find relevant social services near you.</h5></div>
       </div>
       <div id="sidebar">
